--- a/public/styles.css
+++ b/public/styles.css
@@ -1,29 +1,43 @@
 body {
-  background-color: darkslategray;
+  background-color: lemonchiffon;
   font-family: "Helvetica Neue";
 }
 
 .container {
   background-color: white;
-  width: 400px;
-  max-height: 550px;
+  width: 560px;
+  height: 400px;
   margin: 60px auto;
   padding: 1px 20px;
 }
 
-.shrink {
-  float: right;
-  margin-top: 20px;
-}
 
 h1 {
   font-weight: 100;
+  font-size: 42px;
+  text-align: center;
+  margin-top: 40px;
 }
 
-h2 {
-  font-weight: 300;
-  margin-top: -15px;
+.garage-cover {
+  z-index: 4;
+  background-color: blue;
+  transition: 2s;
+  height: 400px;
+  width: 600px;
+  position: absolute;
+  margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
+
+.open {
+  height: 20px;
+  background-color: lightblue;
+}
+
 
 .italics {
   color: gray;
